--- a/references.bib
+++ b/references.bib
@@ -67,3 +67,15 @@
 	title = {An incentive-based approach for improving data reproducibility},
 	url = {https://www.science.org/doi/full/10.1126/scitranslmed.aaf5003}
 }
+
+@article{
+  gentleman2007a,
+  title={Statistical Analyses and Reproducible Research},
+  volume={16},
+  DOI={10.1198/106186007X178663},
+  number={1},
+  journal={Journal of Computational and Graphical Statistics},
+  publisher={Taylor},
+  author={Gentleman, Robert and Lang, Duncan Temple},
+  year={2007},
+pages={1–23} }
