--- a/Assignment_1_besvarelse.tex
+++ b/Assignment_1_besvarelse.tex
@@ -3,6 +3,7 @@
 \PassOptionsToPackage{hyphens}{url}
 %
 \documentclass[
+  11pt,
 ]{article}
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -175,7 +176,7 @@ notebooks}\label{reproducibility-r-notebooks}}
 \protect\hyperlink{ref-peng2011}{Peng}
 (\protect\hyperlink{ref-peng2011}{2011}) states that ``The standard of
 reproducibility calls for the data and the computer code used to analyze
-the data be made available to others'' . As a standard , this creates a
+the data be made available to others.'' As a standard, this creates a
 tedious and non-effective approach to replication. A far more beneficial
 process is to independently inspect utilized data variables. R-notebooks
 and other reproducible systems could serve as a crucial component in
@@ -253,9 +254,8 @@ the ability of the scientific community to address this problem wanes.
 In addition, there is considerable potential for reputational damage to
 scientists, universities, and entire fields (for example, cancer
 biology, genomics, and psychology).
-\protect\hyperlink{ref-Science.org}{\emph{An Incentive-Based Approach
-for Improving Data Reproducibility}}
-(\protect\hyperlink{ref-Science.org}{n.d.})
+(\protect\hyperlink{ref-Science.org}{\emph{An Incentive-Based Approach
+for Improving Data Reproducibility}, n.d.})
 
 One possible cause of irreproducible-data is stated by Hessen
 as``\emph{Scientists are incentivized to produce more results at the
@@ -276,9 +276,8 @@ result}.'' Hessen furthermore list three possible solutions:
   credit-maximizing optimum and the social optimum would be reduced)}
 \item
   A third solution aims to compensate for the misalignment.\\
-  (l\emph{imiting the number of papers scientists may publish per unit
-  time) \protect\hyperlink{ref-schulz2016}{Schulz et al.}
-  (\protect\hyperlink{ref-schulz2016}{2016})}
+  (\emph{limiting the number of papers scientists may publish per unit
+  time}) (\protect\hyperlink{ref-schulz2016}{Schulz et al., 2016})
 \end{itemize}
 
 \hypertarget{incentivizing-gone-wrong}{%
@@ -293,8 +292,7 @@ Additionally, Wakefield most likely manipulated the data, thus
 presenting false results. Since then Wakefield has become the
 ``\emph{godfather}'' for the anti-vaccine movement, a movement whom have
 grown exponentially during the covid-19 pandemic.
-\protect\hyperlink{ref-schulz2016}{Schulz et al.}
-(\protect\hyperlink{ref-schulz2016}{2016})
+(\protect\hyperlink{ref-schulz2016}{Schulz et al., 2016})
 
 \hypertarget{example-list-2-level}{%
 \subsection{Example list 2 level}\label{example-list-2-level}}
@@ -363,9 +361,8 @@ replicating present day clinical-research data is demanding. Which often
 leads to drugs having to prolong their release to actual patient trials.
 One human factor could be the fear of being ``discredited'' among peers,
 which lead to an bias among researchers. Ultimately causing studies not
-to be reproduced. \protect\hyperlink{ref-Pharm-tech}{\emph{Why Is
-Reproducing Pharmaceutical Medical Research so Hard?}}
-(\protect\hyperlink{ref-Pharm-tech}{n.d.})
+to be reproduced. (\protect\hyperlink{ref-Pharm-tech}{\emph{Why Is
+Reproducing Pharmaceutical Medical Research so Hard?}, n.d.})
 
 \hypertarget{conclusion}{%
 \section{Conclusion}\label{conclusion}}
